[tool.poetry]
name = "finalproject-gorelikov-m25-555"
version = "0.1.0"
description = "Console currency wallet project"
authors = ["Matvey Gorelikov"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^8.4.2"
prettytable = "^3.10.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", "data", "tests", "constants.py", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
